# karaoterm

./: Cargo.toml  README.md
samples/: demo_plain.srt
src/: main.rs
