[package]
name = "karaoterm"
version = "0.1.0"
authors = ["surrel <1993113+gsurrel@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srtparse = "0.2.0"
termion = "1.5.5"
clap = "3.0.0-beta.1"